lab1/Test/L1-A-12-50.cmm
float Xb ( int uFUz9RLwNHxY05Mn32O ) {
  || QDmPL3_ajMBJvEJAL6 && V_7vuxiQ3X1mqN1ch + - ! 
    - NEIW5M [ l73l = aNt == f8tLvGqLmc3jXUHZ8Cc - ff5h 
    / YeKqocB1mXnUxlz2TCP ( muoj , nFf >= uVoeSPwQzcSKaj_xT8x 
    / ! ( RYlf2qu6HYdj44kYDh = EpD5HkxooB = VegJrErEXmwyvPaA 
    = unDHMHaJg7bcOO_0 = UJJ && HjU65_PY_a != l2OlBEdvUpfmt9xhL6zE 
    + iypXmS2 / uvK01OhOrY86A ( Y < AHCKbwXUtjnmjrGoMB 
    * ! ( sOuW0r_aHndsJqGrjn_ <= ( v1JQsFwFKWU7uW0nTkpk 
    || WWoaTEPkNR0zWGG > p6TFK4AoVA__Vb ) ) + - scf9l 
    . wL8T9E . abHhOGE47ILig7j . kpN_mUwKT ) / - ! - ! 
    340758287 / ! 1079545996.1931104191 . gKa6pVexlg ) 
    ) . ze7C1ZNPvF7dkWg * ztrFX88Cc8vYB ( ) ] / kvexmw 
    ;
}
struct {
  struct vlln6vTeZL1nuq AgyJrPH , jY8vv4Mj_DcLYYpn_q 
    [ 1680848380 ] = gq0633YvYPBdbOsiccmw ;
};
int UaGe , f3UNiKlQNVA 

;
int ;
`int ;
struct rTvMEst {
  int x ;
  int QPLlYmE2yzUmqG0mn ;
};
int kYAAgbp0FV8 
;
int rO ( ) {
  if ( d )   oKriNHNEl ;
else   if ( sXfLBs7aUT1 )   if ( zAh93uroMAt )   while 
    ( h8kQ8sLpm8Jw2_hS6CGi ) {
    if ( G )     XYOgU ;
else     return cWBHPDLhBiU ;

  }



}
int _gfyAZBwlZzjKO ( ) {
}
int ;
int ;
int ;
int XtJbouCGn7Y ( ) {
}
int ;
int U6aZcYvVE9ndWK ( int xnOu , int xLMm0pAs5gGw49J 
  ) {
}
@